--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,12 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - johannesautenrieb
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - JohannesAutenrieb/CBF_ACC
+  - JohannesAutenrieb/CBF_Obstacle_Avoidance 
+  - JohannesAutenrieb/1D_MPC_CBF 
+  - JohannesAutenrieb/mission_planning
+  - JohannesAutenrieb/MissileSimulation 
+  - JohannesAutenrieb/RobustMissileControl
