--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,52 @@
-- title: General Information
-  type: map
-  contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
-
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D. Candidate
+      institution: Technical University of Braunschweig, Braunschweig, DE
+      year: since 03/2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Dissertation Title: A Nonlinear Attitude Control Approach for a Class of Overactuated and Highly Uncertain Hypersonic Flight Systems.
+    - title: M.Sc. in Autonomous Vehicle Dynamics & Control
+      institution: Cranfield University, Cranfield, UK
+      year: 09/2018 - 10/2019
       description:
-        - Description 1.
-        - Description 2.
+        - Master’s Thesis: Development of a neural network-supported nonlinear flight control system for an air taxi with a tilt-wing concept.
+    - title: B.Eng. in Aerospace Engineering
+      institution: University of Applied Sciences Aachen, Aachen, DE
+      year: 09/2012 - 03/2017
+      description:
+        - Bachelor’s Thesis: Development of a generic parameterized 6DOF flight dynamics model for a flight simulator to improve Eurofighter pilot training.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Scientist & Ph.D. Candidate
+      institution: German Aerospace Center (DLR), Braunschweig, DE
+      year: since 12/2019
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Research in the field of nonlinear Guidance & Control and advising industrial/political institutions regarding the implications of hypersonic missile technologies.
+    - title: Visiting Scholar
+      institution: University of Oxford, Oxford, UK
+      year: since 08/2024
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Research on online optimization algorithms for improved decision-making in nonlinear system networks under uncertain dynamic conditions.
+    - title: Visiting Scholar
+      institution: Massachusetts Institute of Technology, Cambridge, USA
+      year: 08/2022 - 02/2023
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Research on control barrier functions for use in safety-critical, nonlinear, and adaptive flight control systems.
+    - title: Master’s Candidate
+      institution: Rolls-Royce, Cranfield, UK
+      year: 04/2019 - 09/2019
+      description:
+        - Development of flight control algorithms (nonlinear dynamic inversion, adaptive neural networks, control allocation) for novel eVTOL concepts.
+    - title: Visiting Student Researcher
+      institution: Korea Advanced Institute of Science and Technology (KAIST), Daejeon, KOR
+      year: 04/2018 - 06/2018
+      description:
+        - Programming and modeling of a simulation framework for the generic simulation of nonlinear flight dynamics of novel aircraft.
+    - title: Student Software Engineer, Intern, and Bachelor’s Candidate
+      institution: CAE GmbH, Stolberg, DE
+      year: 03/2015 - 02/2018
+      description:
+        - Collaborated in a multinational Scrum team to develop and integrate new features, tools, and tests for the Eurofighter flight simulation.
