--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Johannes A. # the website title (if blank, full name will be used instead)
+title: Johannes Autenrieb # the website title (if blank, full name will be used instead)
 first_name: Johannes
 middle_name: 
 last_name: Autenrieb
