--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -6,6 +6,16 @@
       year: since 03/2022
       description:
         - Dissertation Title: A Nonlinear Attitude Control Approach for a Class of Overactuated and Highly Uncertain Hypersonic Flight Systems.
+    - title: Visiting Ph.D. Student
+      institution: University of Oxford, Oxford, UK
+      year: since 08/2024
+      description:
+        - Research on online optimization algorithms for improved decision-making in nonlinear system networks under uncertain dynamic conditions.
+    - title: Visiting Ph.D. Student
+      institution: Massachusetts Institute of Technology, Cambridge, USA
+      year: 08/2022 - 02/2023
+      description:
+        - Research on control barrier functions for use in safety-critical, nonlinear, and adaptive flight control systems.
     - title: M.Sc. in Autonomous Vehicle Dynamics & Control
       institution: Cranfield University, Cranfield, UK
       year: 09/2018 - 10/2019
@@ -25,16 +35,6 @@
       year: since 12/2019
       description:
         - Research in the field of nonlinear Guidance & Control and advising industrial/political institutions regarding the implications of hypersonic missile technologies.
-    - title: Visiting Scholar
-      institution: University of Oxford, Oxford, UK
-      year: since 08/2024
-      description:
-        - Research on online optimization algorithms for improved decision-making in nonlinear system networks under uncertain dynamic conditions.
-    - title: Visiting Scholar
-      institution: Massachusetts Institute of Technology, Cambridge, USA
-      year: 08/2022 - 02/2023
-      description:
-        - Research on control barrier functions for use in safety-critical, nonlinear, and adaptive flight control systems.
     - title: Master’s Candidate
       institution: Rolls-Royce, Cranfield, UK
       year: 04/2019 - 09/2019
